# HTTP-Server

./: CMakeLists.txt  README.md  conanfile.txt
config/: config.json
config/PHP/: WebName.php
config/SSL/: mycert.pem
doc/: RFC.xml  configDoxygen
include/Server/: ASocketHandler.hpp  DLLoader.hpp  Error.hpp  HTTPObject.hpp  IModule.hpp  INetwork.hpp  ISocketHandler.hpp  SignalHandler.hpp  configHandler.hpp  jsonReader.hpp  moduleManager.hpp  moduleType.hpp  pathHandler.hpp  processingList.hpp  requestManager.hpp  serverCore.hpp  tcpConnection.hpp
modules/: CMakeLists.txt
modules/phpCgiModule/: CMakeLists.txt
modules/phpCgiModule/include/: LinuxCmdExec.hpp  WindowsCmdExec.hpp  phpCgiModule.hpp
modules/phpCgiModule/src/: LinuxCmdExec.cpp  WindowsCmdExec.cpp  phpCgiModule.cpp
modules/phpExample/: example1.php
modules/snakeModule/: CMakeLists.txt
modules/snakeModule/include/: Coord.hpp  Snake.hpp
modules/snakeModule/src/: Coord.cpp  Snake.cpp
modules/sslModule/: CMakeLists.txt
modules/sslModule/include/: sslModule.hpp
modules/sslModule/src/: sslModule.cpp
scripts/: action-script-build.sh  action-script-install.sh  action-script-launch-test.sh  launchHTTPSRequest.sh
src/Server/: ASocketHandler.cpp  Error.cpp  HTTPObject.cpp  configHandler.cpp  jsonReader.cpp  main.cpp  moduleManager.cpp  pathHandler.cpp  processingList.cpp  requestManager.cpp  serverCore.cpp  tcpConnection.cpp
tests/: CMakeLists.txt  testConfigHandler.cpp  testHTTPObject.cpp  testJsonReader.cpp  testPathHandler.cpp  testPhpCgiModule.cpp  testProcessingList.cpp  testSnakeModule.cpp
